package com.analyzer.session.analysis.presentation.builder.state

internal data class SessionAnalysisRawChartPoint(val fraction: Float, val value: Float)
